Fixed overlapping of dialog with navigation bar.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -34,7 +34,7 @@ did not receive this file, see https://www.gnu.org/licenses/gpl-3.0.txt.
  */
 .Dialog {
     position: absolute;
-    z-index: 6000;
+    z-index: 6102;
     min-width: 150px;
     background: #FFF;
 }
